Observable Entities, Java 17